Magellan Changelog:
--------------------------------------

Below are the key highlights of changes that have been made to Magellan. See the subversion repository for a 
detailed history and prior versions (http://code.google.com/p/magellan-framework/source/checkout). 

2010-08-31: 
  - Published a RubyGem - http://rubygems.org/gems/magellan-framework

2010-08-21:
  - Out of the box support for Data Annotations in Magellan Forms.
  - .NET 4.0 client profile compatability.
  - Zones are now freezables rather than ContentControls, to keep things lighter and have less visual tree 
    wierdness.

2008-08-05:
  - RedirectResult and BackResult use dispatcher, so they'll work with AsyncController now
  - Extensions will now be packaged into their own project

2008-07-28:
  - Moved to Google Code (http://code.google.com/p/magellan-framework)

2010-06-04:
  - Split RouteCollection into RouteResolver and RouteCatalog, to make creating a set of routes with the same 
    handler much easier.
  - Enabled ability to navigate using a lambda expression - e.g.,:
      Navigator.Navigate<PatientController>(x => x.Search("Hello"));
    Which is the same as:
      Navigator.Navigate(new {controller = "Patient", action = "Search", text = "Hello"});

2010-06-02:
  - NavigateCommand has been removed. Views or view models should implement INavigationAware, or the Blend 
    NavigateAction should be used.

2010-05-30:
  - Routing and the NavigatorFactory now take centre stage.
  - Better support for multiple frames of navigation.
  - Exceptions thrown by controllers are no longer wrapped by UnhandledActionException. However, async 
    requests (with AsyncActionInvoker) will still be wrapped to allow the exception to dispatch onto the UI 
    thread.
  - Models are passed direct to action results (e.g., return Page("MyPage", new FooModel())) rather than 
    using a Model property.

2010-05-02:
  - Introduced a routing engine, similar to ASP.NET MVC's

2010-02-20: